--- a/main_secuencial/Makefile
+++ b/main_secuencial/Makefile
@@ -1,8 +1,8 @@
 output: main.o
-	g++ main.o -o output
-./
+	g++ main.o -o secuencial
+
 main.o: main.cpp
 	g++ -c main.cpp
 
 clean:
-	rm *.o output
+	rm *.o secuencial
